# valkey-monitor

./: README.md  pyproject.toml  valkey-monitor.py
valkey_monitor/: __init__.py  cli.py  collector.py  server.py  terminal.py
valkey_monitor/web/: app.py
valkey_monitor/web/static/: dashboard.js  style.css
valkey_monitor/web/templates/: index.html
